# dwarf-hovel-cpp

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
DwarfHovel/: CMakeLists.txt  gl_error.cpp  gl_program.h  glew_error.cpp  glew_error.h  logger.cpp  main.cpp  render.frag  render.vert  sdl_error.h  settings.json  texture.cpp  texture.h  window.h
DwarfHovel/assets/bitmap_templates/: asterisk.txt  dot.txt  hashtag.txt  mouse_cursor.txt  person_east.txt  person_north.txt  person_south.txt  person_west.txt  solid.txt  sword.txt
DwarfHovel/include/: Bitmap2bpp.h  Bitmap2pp.h  CharacterTestState.h  ColoredBitmap.h  DemoGameState.h  GameState.h  GameStateManager.h  IRenderContext.h  MainMenuGameState.h  Map.h  MapTile.h  OEM437.h  Particle.h  ParticleFountain.h  Point2F.h  Point2I.h  Point2UI.h  Rectangle.h  Settings.h  SoundFXGameState.h  Sprite.h  UIButton.h  UIElement.h  UILabel.h  Vector2F.h  Vector2I.h  Vector2UI.h  World.h  bitmap_templates.h  bitmaps.h  color.h  config.h  gl_error.h  gl_shader.h  logger.h  main.h  map_tiles.h  moremath.h  perlin.h  system.h  (+3 more)
DwarfHovel/include/io/: Logger.h  Settings.h  io.h  json.h
DwarfHovel/include/math/: Point.h  Point2F.h  Point2I.h  Point2UI.h  Rectangle.h  Tuple.h  Vector.h  Vector2F.h  Vector2I.h  Vector2UI.h  math.h  moremath.h
DwarfHovel/include/states/: CharacterTestState.h  DemoGameState.h  GameState.h  GameStateManager.h  MainMenuGameState.h  MapTestState.h  SoundFXGameState.h  states.h
DwarfHovel/include/ui/: UIButton.h  UIElement.h  UILabel.h  ui.h
DwarfHovel/src/: CharacterTestState.cpp  DemoGameState.cpp  GameState.cpp  GameStateManager.cpp  MainMenuGameState.cpp  Map.cpp  MapTile.cpp  OEM437.cpp  Settings.cpp  SoundFXGameState.cpp  UIButton.cpp  UIElement.cpp  UILabel.cpp  bitmap_templates.cpp  bitmaps.cpp  color.cpp  gl_error.cpp  gl_program.cpp  gl_shader.cpp  glew_error.cpp  logger.cpp  main.cpp  map_tiles.cpp  sdl_error.cpp  system.cpp  texture.cpp  window.cpp
DwarfHovel/src/io/: Logger.cpp  Settings.cpp
DwarfHovel/src/states/: CharacterTestState.cpp  DemoGameState.cpp  GameState.cpp  GameStateManager.cpp  MainMenuGameState.cpp  MapTestState.cpp  SoundFXGameState.cpp
DwarfHovel/src/ui/: UIButton.cpp  UIElement.cpp  UILabel.cpp
